# ComodoBypassRootkit

./: Payload.7z  README.md  TerminatorPayload.7z
BSODPayload/: Payload.lnk
ComodoBypassRootkit/ComodoBypassRootkit/: ComodoBypassRootkit.sln
ComodoBypassRootkit/ComodoBypassRootkit/ComodoBypassRootkit/: ComodoBypassRootkit.inf
ComodoBypassWithBSOD/ComodoBypassRootkit/ComodoBypassRootkit/: ComodoBypassRootkit.vcxproj  ComodoBypassRootkit.vcxproj.filters  Source.cpp
Payload/: ComodoBypassRootkit.sys  Payload.lnk  README.txt
TerminatorDriver/: README.md
TerminatorDriver/Signing/: README.md  signauto.bat  terminator.sys
TerminatorDriver/terminatordriver/: Cargo.toml
TerminatorDriver/terminatordriver/src/: lib.rs
TerminatorPayload/: Payload.lnk  README.txt  terminator.sys
